# proctest

./: LICENSE  Main.hs  README.md  processtester.cabal  proctest.cabal
Test/: Proctest.hs
Test/Proctest/: Assertions.hs
examples/: netcat-test.hs
