name:          proctest
version:       0.1
license:       MIT
author:        Niklas Hambüchen
copyright:     Copyright: (c) 2012 Niklas Hambüchen
category:      Testing
stability:     experimental
homepage:      https://github.com/nh2/proctest
bug-reports:   https://github.com/nh2/proctest/issues

build-type:    Simple
cabal-version: >= 1.10


library
  default-language: Haskell2010
  exposed-modules:
    Test.Proctest
  build-depends:
      base
    , process >= 1.1.0.1
    , bytestring
    , text
  ghc-options:
    -Wall


executable example-netcat-test
  default-language: Haskell2010
  hs-source-dirs:
    ., examples
  main-is:
    netcat-test.hs
  build-depends:
      base
    , process
    , bytestring
    , text
    , hspec
    , HUnit
  ghc-options:
    -threaded -fwarn-unused-imports
